rename project: ais -> mcd

--- a/notebooks/mixture-1d.ipynb
+++ b/notebooks/mixture-1d.ipynb
@@ -30,7 +30,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from ais import UnadjustedLangevin\n",
+    "from mcd import UnadjustedLangevin\n",
     "import equinox as eqx\n",
     "import optax\n",
     "import jax\n",
@@ -74,8 +74,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
-   "id": "fdf20f2a",
+   "execution_count": 5,
+   "id": "f454e81a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -92,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "d21c71d0",
    "metadata": {},
    "outputs": [
@@ -115,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 7,
    "id": "ead3b832",
    "metadata": {
     "code_folding": []
@@ -197,7 +197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 8,
    "id": "49dee393",
    "metadata": {
     "scrolled": false
@@ -206,7 +206,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "d5b94e8995d24ad6a49070d209b343c7",
+       "model_id": "4233fa20c24549e591c255f7f2c1e5b8",
        "version_major": 2,
        "version_minor": 0
       },
@@ -260,7 +260,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 9,
    "id": "f18f813d",
    "metadata": {},
    "outputs": [
@@ -270,7 +270,7 @@
        "Text(0, 0.5, 'Epoch')"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -293,7 +293,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 10,
    "id": "eb5e8f40",
    "metadata": {},
    "outputs": [],
@@ -312,7 +312,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 11,
    "id": "7d5e688e",
    "metadata": {
     "scrolled": false
@@ -392,7 +392,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 12,
    "id": "06ab0c3c",
    "metadata": {},
    "outputs": [
@@ -402,7 +402,7 @@
        "Text(0.5, 1.0, 'Histogram of trajectories')"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     },
